# DirecTree

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  tree.py
directree/: __main__.py  cfm.py  cli.py  cloc.py  constants.py  directree.py  lookup_dicts.py
directree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
directree/directree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
