[metadata]
name = directree
version = 0.1.0
authors = Samar_Arora
author_email = samararora99@gmail.com   
description = "A simple directory analysis Tool"
long_description = file: README.md 
long_description_content_type = text/markdown
url = https://github.com/Samar2170/DirecTree/tree/
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir = 
        = directree
packages = find:
python_requires = >=3.8

[options.packages.find]
where = directree

[options.entry_points]
console_scripts =
    directree = directree.directree:main